[PS-2266][SG-1067] Desktop: restyle generator panel to be panel-like and avoid overflowing (#4480)
* Port browser styles for generated password from browser to desktop

* Tweak styles

as the overall styles seem to diverge quite a bit from those of the browser extension, so things like the border color etc aren't as nicely defined, and there's already padding happening on the outer container, making the extra padding superfluous

* Wrap generator up as a `.box` / `.box-content` construct

adds the nice consistent box styles, same as the following blocks of content

* Wrap `.box` around both password AND username generated blocks

* Remove panel-like style, add browser extension border style

--- a/apps/desktop/src/scss/misc.scss
+++ b/apps/desktop/src/scss/misc.scss
@@ -191,23 +191,34 @@ p.lead {
 .generated-block {
   font-size: $font-size-large;
   font-family: $font-family-monospace;
-  min-height: 50px;
+  padding: 8px 10px 8px 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  border-radius: $border-radius;
+  border: 1px solid;
+
+  @include themify($themes) {
+    background-color: transparent;
+    border-color: themed("borderColorAlt");
+  }
 
   .modal-body & {
-    margin: 10px;
+    margin-top: 10px;
   }
 
   .generated-wrapper {
     text-align: left;
     width: 100%;
+    min-width: 0;
+    white-space: pre-wrap;
+    word-break: break-all;
+    padding: 15px;
   }
 
   .action-buttons {
     display: flex;
     align-self: center;
+    height: 100%;
+    margin-left: 10px;
 
     button {
       margin-left: 10px;
